--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,6 +1,7 @@
 <h2>BashBunny Studio</h2>
 
-<p>
+<% highlight = @bash_bunny_path.include?('/') ? 'ui-state-highlight' : 'ui-state-error' %>
+<p class="<%= highlight %> ui-corner-all">
   <b>Mount Point:</b> <%= @bash_bunny_path %>
   <a href="#" onclick="location.reload();"><%= fa_icon "refresh" %></a>
   <% if @bash_bunny_path.include?('/') %>
