MOved buttons to the topfor less scrolling

--- a/app/views/dashboard/partials/_switch_2.html.erb
+++ b/app/views/dashboard/partials/_switch_2.html.erb
@@ -1,5 +1,7 @@
 <div id="tabs-switch-2">
-  <textarea calss="switch-two payload-editor"><%= @switch_two_text %></textarea>
-  <br/>
-  <button class="switch-two save" onclick="writePayload(2)">Save</button>
+  <p>
+    <button class="switch-two save" onclick="writePayload(2)">Save</button>
+  </p>
+  <hr/>
+  <textarea class="switch-two payload-editor"><%= @switch_two_text %></textarea>
 </div>
