--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -1,3 +1,54 @@
+html, body{
+  background: #272822;
+  color: #CCCCCC;
+  font-family: "Trebuchet MS", sans-serif;
+  height: 100%;
+}
+
+#tabs{
+  height: 80%;
+}
+
+div[id^=tab]{
+  height: 100%;
+  background: #272822;
+  color: #CCCCCC;
+}
+
 input[type=text]{
   width: 50%;
+}
+
+.CodeMirror{
+  height: 75% !important;
+}
+
+.column-3{
+  column-count: 3;
+}
+
+.dataTables_wrapper{
+  background: #8f8f8f;
+  padding: 10px;
+}
+
+.odd{
+  color: #333333;
+  background: #bbbbbb !important;
+}
+
+.even{
+  color: #333333;
+}
+
+#tabs-debug a{
+  color:#CCCCCC;
+}
+
+#tabs-debug a:visited{
+  color:#CCCCCC;
+}
+
+#tabs-debug a:hover{
+  color:#CCCCCC;
 }
