DRY Switch Code

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -5,8 +5,8 @@
 </p>
 <div id="tabs">
   <%= render 'dashboard/partials/tab_menu' %>
-  <%= render 'dashboard/partials/switch_1' %>
-  <%= render 'dashboard/partials/switch_2' %>
+  <%= render 'dashboard/partials/switch', switch_position: 1 %>
+  <%= render 'dashboard/partials/switch', switch_position: 2 %>
   <%= render 'dashboard/partials/extensions' %>
   <%= render 'dashboard/partials/payloads' %>
   <%= render 'dashboard/partials/git' %>
