--- a/app/views/dashboard/partials/_switch_file_browser.html.erb
+++ b/app/views/dashboard/partials/_switch_file_browser.html.erb
@@ -5,10 +5,10 @@
         <% path = "/payloads/switch#{local_assigns[:switch_position].to_s}" %>
         <% Dir.foreach("#{@bash_bunny_path}#{path}") do |switch_file| %>
             <% next if switch_file == '.' || switch_file == '..' %>
-            <li><a href="/dashboard/raw_file?path=<%= path %>&file=<%= switch_file %>" target="_blank"><%= switch_file %></a></li>
+            <li><a class="switch-<%= local_assigns[:switch_position].to_s %> edit-file-link" onclick="updatePayloadEditor('<%= path %>', '<%= switch_file %>', <%= local_assigns[:switch_position].to_s %>)"><%= switch_file %></a></li>
         <% end %>
       </ul>
   <% end %>
-  <label for="switch-<%= local_assigns[:switch_position].to_s %>-upload">Upload</label>
-  <input type="file" id="switch-<%= local_assigns[:switch_position].to_s %>-upload" name="switch-<%= local_assigns[:switch_position].to_s %>-upload">
+  <!--<label for="switch-<%= local_assigns[:switch_position].to_s %>-upload">Upload</label>-->
+  <!--<input type="file" id="switch-<%= local_assigns[:switch_position].to_s %>-upload" name="switch-<%= local_assigns[:switch_position].to_s %>-upload" title=" ">-->
 </div>
