Foundation UI Fixes

--- a/app/assets/stylesheets/studio.scss
+++ b/app/assets/stylesheets/studio.scss
@@ -1,2 +1,14 @@
+.column-3{
+  column-count: 3;
+}
+
 .CodeMirror{
+}
+
+.data-table .odd{
+  background: #b5b5b5 !important;
+}
+
+.data-table .even{
+  background: #c4c4c4 !important;
 }
