--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,11 @@
 
 <body>
 <%= render 'shared/navigation' %>
-<%= yield %>
+<br/>
+<div class="row">
+  <div class="medium-22 columns">
+    <%= yield %>
+  </div>
+</div>
 </body>
 </html>
