--- a/app/views/studio/debug.html.erb
+++ b/app/views/studio/debug.html.erb
@@ -4,7 +4,7 @@
       <% path = '/debug' %>
       <% Dir.foreach("#{bunny_path}#{path}") do |debug_file| %>
           <% next if debug_file == '.' || debug_file == '..' %>
-          <li><a href="/dashboard/raw_file?path=<% path %>&file=<%= debug_file %>" target="_blank"><%= debug_file %></a></li>
+          <li><a href="/studio/raw_file?path=<%= path %>&file=<%= debug_file %>" target="_blank"><%= debug_file %></a></li>
       <% end %>
     </ul>
 <% end %>
