--- a/app/views/studio/extensions.html.erb
+++ b/app/views/studio/extensions.html.erb
@@ -1,7 +1,5 @@
 <%= javascript_include_tag 'extensions' %>
-<p>
-  <button class="extension sync button" onclick="syncExtensions()">Sync</button>
-</p>
+<button class="extension sync button" onclick="syncExtensions()">Sync</button>
 <hr/>
 <div class="column-3">
   <% if File.exist?("#{local_repo_path}/payloads/extensions") %>
@@ -15,10 +13,11 @@
           <% else %>
               <% checked = '' %>
           <% end %>
-          <p>
-            <label for="extension-checkbox-<%= refresh %>-<%= index %>"><%= IO.readlines("#{local_repo_path}/payloads/extensions/#{extension}").last.split.last %></label>
+          <%= IO.readlines("#{local_repo_path}/payloads/extensions/#{extension}").last.split.last %>
+          <div class="switch">
             <input type="checkbox" name="extension-checkbox-<%= refresh %>-<%= index %>" id="extension-checkbox-<%= refresh %>-<%= index %>" <%= checked %>>
-          </p>
+            <label for="extension-checkbox-<%= refresh %>-<%= index %>"></label>
+          </div>
       <% end %>
   <% end %>
 </div>
