--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -7,23 +7,10 @@
 
   <% highlight = bunny_mounted? ? 'success' : 'alert' %>
   <section class="top-bar-section">
-    <ul class="right <%= highlight %>">
-      <% if bunny_mounted? %>
-          <li class="active"><a href="#" onclick="eject_bunny()"><%= fa_icon "eject" %></a></li>
-      <% else %>
-          <li class="active"><a href="#" onclick="location.reload();"><%= fa_icon "refresh" %></a>
-      <% end %>
-      <li><a href="#"><%= bunny_path || 'Bash Bunny Not Found' %></a></li>
-    </ul>
-    <ul class="left">
-      <li class="<%= active_page(studio_switch1_path) %>"><%= link_to 'Switch 1', studio_switch1_path %></li>
-      <li class="<%= active_page(studio_switch2_path) %>"><%= link_to 'Switch 2', studio_switch2_path %></li>
-      <li class="<%= active_page(studio_extensions_path) %>"><%= link_to 'Extensions', studio_extensions_path %></li>
-      <li class="<%= active_page(studio_payloads_path) %>"><%= link_to 'Payloads', studio_payloads_path %></li>
-      <li class="<%= active_page(studio_loot_path) %>"><%= link_to 'Loot', studio_loot_path %></li>
-      <li class="<%= active_page(studio_debug_path) %>"><%= link_to 'Debug', studio_debug_path %></li>
-      <li class="<%= active_page(studio_git_path) %>"><%= link_to 'Git', studio_git_path %></li>
-      <li class="<%= active_page(studio_learn_path) %>"><%= link_to 'Learn', studio_learn_path %></li>
-    </ul>
+
+  </section>
+
+  <section class="right-small">
+    <a class="right-off-canvas-toggle menu-icon" href="#"><span></span></a>
   </section>
 </nav>
