--- a/app/views/studio/extensions.html.erb
+++ b/app/views/studio/extensions.html.erb
@@ -1,4 +1,5 @@
 <%= javascript_include_tag 'extensions' %>
+<h3>Extensions</h3>
 <button class="extension sync button" onclick="syncExtensions()">Sync</button>
 <hr/>
 <div class="column-3">
