--- a/app/assets/stylesheets/studio.scss
+++ b/app/assets/stylesheets/studio.scss
@@ -7,7 +7,7 @@ html, body{
 }
 
 .CodeMirror{
-  height: 75vh;
+  height: 70vh;
 }
 
 .data-table .odd{
@@ -20,4 +20,9 @@ html, body{
 
 .main-section{
   height: 75vh;
+}
+
+.logo{
+  margin: 5px;
+  display: inline-block;
 }
