--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,8 +1,6 @@
 <nav class="top-bar" data-topbar role="navigation">
   <ul class="title-area">
-    <li class="name">
-      <h1><a href="#">BashBunny Studio</a></h1>
-    </li>
+    <div class="logo"><%= image_tag 'bashbunny.svg', size: '35x35', color: 'red' %></div> BashBunny Studio
   </ul>
 
   <% highlight = bunny_mounted? ? 'success' : 'alert' %>
