--- a/app/views/shared/_mobile_navigation.html.erb
+++ b/app/views/shared/_mobile_navigation.html.erb
@@ -7,7 +7,7 @@
     <li class="<%= active_page(studio_loot_path) %>"><%= link_to 'Loot', studio_loot_path %></li>
     <li class="<%= active_page(studio_debug_path) %>"><%= link_to 'Debug', studio_debug_path %></li>
     <li class="<%= active_page(studio_git_path) %>"><%= link_to 'Git', studio_git_path %></li>
-    <li class="<%= active_page(studio_learn_path) %>"><%= link_to 'Learn', studio_learn_path %></li>
+    <li class="<%= active_page(studio_firmware_path) %>"><%= link_to 'Firmware', studio_firmware_path %></li>
 
     <% if bunny_mounted? %>
         <li class="bunny-status mounted"><a href="#" onclick="eject_bunny()"><%= fa_icon "eject" %> : <%= bunny_path %></a></li>
