--- a/app/views/studio/learn.html.erb
+++ b/app/views/studio/learn.html.erb
@@ -1,1 +1,18 @@
 <%= javascript_include_tag 'learn' %>
+<ul class="tabs" data-tabs id="learn-tabs">
+  <li class="tabs-title is-active"><a href="#video" aria-selected="true">Video</a></li>
+  <li class="tabs-title"><a href="#wiki">Wiki</a></li>
+  <li class="tabs-title"><a href="#forum">Forum</a></li>
+</ul>
+
+<div class="tabs-content" data-tabs-content="learn-tabs">
+  <div class="tabs-panel is-active" id="video">
+    1
+  </div>
+  <div class="tabs-panel" id="wiki">
+    2
+  </div>
+  <div class="tabs-panel" id="forum">
+    3
+  </div>
+</div>
