--- a/app/assets/stylesheets/studio.scss
+++ b/app/assets/stylesheets/studio.scss
@@ -34,13 +34,18 @@ html, body{
 }
 
 .unmounted{
-  background-color: red;
-  border-color: red;
+  background-color: #ec5840;
+  border-color: #ec5840;
 }
 
 .mounted{
-  background-color: green;
-  border-color: green;
+  background-color: #13c25c;
+  border-color: #13c25c;
+}
+
+.is-active{
+  background-color: #008CBA;
+  border-color: #008CBA;
 }
 
 iframe{
