--- a/app/views/studio/loot.html.erb
+++ b/app/views/studio/loot.html.erb
@@ -1,1 +1,9 @@
 <%= javascript_include_tag 'loot' %>
+<% if bunny_mounted? %>
+    <ul class="vertical menu">
+      <% Dir.foreach(@loot_path) do |debug_file| %>
+          <% next if debug_file == '.' || debug_file == '..' %>
+          <li><a href="/studio/raw_file?path=<%= @loot_path %>&file=<%= debug_file %>" target="_blank"><%= debug_file %></a></li>
+      <% end %>
+    </ul>
+<% end %>
