--- a/app/views/studio/configure.html.erb
+++ b/app/views/studio/configure.html.erb
@@ -3,7 +3,7 @@
   <div class="small-3 medium-1 columns">
     <button class="save button" onclick="writeConfig()">Save</button>
   </div>
-  <div class="small-9 medium-11 columns"><p><%= "#{bunny_path}" %>config.txt</p></div>
+  <div class="small-9 medium-11 columns"><p><%= "#{bunny_path}" %>/config.txt</p></div>
 </div>
 <div class="row">
   <div class="medium-12 columns">
