--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,9 +24,10 @@
         </div>
       </div>
     </section>
-
-
     <a class="exit-off-canvas"></a>
+    <div id="alert-dialog" class="reveal-modal" data-reveal aria-hidden="true" role="dialog">
+      <div id="alert-dialog-content"></div>
+    </div>
   </div>
 </div>
 </body>
