--- a/app/views/shared/_switch_file_browser.html.erb
+++ b/app/views/shared/_switch_file_browser.html.erb
@@ -1,14 +1,13 @@
+<% switch_position = local_assigns[:switch_position].to_s %>
 <div class="switch-file-browser">
   <h4>Files</h4>
   <% if bunny_mounted? %>
-      <ul class="vertical menu">
-        <% path = "/payloads/switch#{local_assigns[:switch_position].to_s}" %>
+      <ul id="file-list" class="vertical menu">
+        <% path = "/payloads/switch#{switch_position}" %>
         <% Dir.foreach("#{bunny_path}#{path}") do |switch_file| %>
             <% next if switch_file == '.' || switch_file == '..' %>
-            <li><a class="switch-<%= local_assigns[:switch_position].to_s %> edit-file-link" onclick="updatePayloadEditor('<%= path %>', '<%= switch_file %>', <%= local_assigns[:switch_position].to_s %>)"><%= switch_file %></a></li>
+            <li><a class="switch-<%= switch_position %> edit-file-link" onclick="updatePayloadEditor('<%= path %>', '<%= switch_file %>', <%= switch_position %>)"><%= switch_file %></a></li>
         <% end %>
       </ul>
   <% end %>
-  <!--<label for="switch-<%= local_assigns[:switch_position].to_s %>-upload">Upload</label>-->
-  <!--<input type="file" id="switch-<%= local_assigns[:switch_position].to_s %>-upload" name="switch-<%= local_assigns[:switch_position].to_s %>-upload" title=" ">-->
 </div>
