Create New File

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
       </div>
     </section>
     <a class="exit-off-canvas"></a>
-    <div id="alert-dialog" class="reveal-modal" data-reveal aria-hidden="true" role="dialog">
+    <div id="alert-dialog" class="small reveal-modal" data-reveal aria-hidden="true" role="dialog">
       <div id="alert-dialog-content"></div>
     </div>
   </div>
