--- a/app/views/shared/_mobile_navigation.html.erb
+++ b/app/views/shared/_mobile_navigation.html.erb
@@ -23,5 +23,7 @@
     <li class="<%= active_page(page_title) %>"><%= link_to page_title, studio_configure_path %></li>
     <% page_title = 'Firmware' %>
     <li class="<%= active_page(page_title) %>"><%= link_to page_title, studio_firmware_path %></li>
+    <% page_title = 'Console' %>
+    <li class="<%= active_page(page_title) %>"><%= link_to page_title, studio_console_path %></li>
   </ul>
 </aside>
