--- a/app/views/studio/console.html.erb
+++ b/app/views/studio/console.html.erb
@@ -2,7 +2,7 @@
 <% if bunny_mounted? %>
 <div class="row">
   <div class="medium-10 columns">
-    <iframe id="console" src="/console" height="600px"></iframe>
+    <iframe id="console" src="/console"></iframe>
   </div>
   <div class="medium-2 columns">
 
