Tested, working, not fantastic...

--- a/app/views/studio/console.html.erb
+++ b/app/views/studio/console.html.erb
@@ -5,7 +5,10 @@
     <iframe id="console" src="/console"></iframe>
   </div>
   <div class="medium-2 columns">
-
+    <span style="font-size: x-small">Press [Enter] if unresponsive.</span>
+    <h4>Login</h4>
+    Username: root<br/>
+    Password: hak5bunny
   </div>
 </div>
 <% end %>
