--- a/app/views/studio/console.html.erb
+++ b/app/views/studio/console.html.erb
@@ -5,10 +5,17 @@
     <iframe id="console" src="/console"></iframe>
   </div>
   <div class="medium-2 columns">
-    <span style="font-size: x-small">Press [Enter] if unresponsive.</span>
-    <h4>Login</h4>
-    Username: root<br/>
-    Password: hak5bunny
+    <p style="font-size: x-small; color: #ec5840">
+      This feature is Experimental!!!<br/>
+      Not all characters will be displayed.<br/>
+      Press [Enter] if unresponsive.
+    </p>
+    <h5>Bash Bunny Login</h5>
+    <p>
+      Username: root<br/>
+      Password: hak5bunny<br/>
+    </p>
+    <!--<button class="button" onclick="shareInternet()">Share internet with Bash Bunny</button>-->
   </div>
 </div>
 <% end %>
