--- a/app/views/studio/console.html.erb
+++ b/app/views/studio/console.html.erb
@@ -10,11 +10,16 @@
       Not all characters will be displayed.<br/>
       Press [Enter] if unresponsive.
     </p>
-    <h5>Bash Bunny Login</h5>
-    <p>
-      Username: root<br/>
-      Password: hak5bunny<br/>
-    </p>
+    <ul class="menu mounted ">
+      <li>
+        <a href="https://wiki.bashbunny.com" target="_blank">Bash Bunny Wiki</a>
+      </li>
+    </ul>
+    <!--<h5>Bash Bunny Login</h5>-->
+    <!--<p>-->
+      <!--Username: root<br/>-->
+      <!--Password: hak5bunny<br/>-->
+    <!--</p>-->
     <!--<button class="button" onclick="shareInternet()">Share internet with Bash Bunny</button>-->
   </div>
 </div>
