--- a/app/views/studio/console.html.erb
+++ b/app/views/studio/console.html.erb
@@ -8,9 +8,10 @@
     <p style="font-size: x-small; color: #ec5840">
       This feature is Experimental!!!<br/>
       Not all characters will be displayed.<br/>
-      Press [Enter] if unresponsive.
+      Press [Enter] if unresponsive.<br/>
+      EVERYTHING YOU TYPE WILL BE SENT OVER HTTP<br/>
     </p>
-    <ul class="menu mounted ">
+    <ul class="menu mounted">
       <li>
         <a href="https://wiki.bashbunny.com" target="_blank">Bash Bunny Wiki</a>
       </li>
